--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-react": "^8.0.2",
     "lucide": "^0.365.0",
     "lucide-react": "^0.263.1",
     "next": "14.0.4",
