--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "next-themes": "^0.2.1",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
+    "react-resizable-panels": "^2.0.18",
     "react-spinners": "^0.13.8",
     "resend": "^2.1.0",
     "sonner": "^1.3.1",
