--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "prisma:migration": "prisma migrate dev"
+    "prisma:migration": "prisma migrate dev",
+    "prisma:migration:custom": "prisma migrate dev --create-only"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
