--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
+    "chartjs-adapter-dayjs-4": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.13",
@@ -46,6 +48,7 @@
     "next-themes": "^0.2.1",
     "query-string": "^9.0.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
